--- a/index.html
+++ b/index.html
@@ -1126,7 +1126,7 @@
             src="https://i.scdn.co/image/ab67616d0000b273f1633137438ea7b4dd9e0371"
             alt=""
           />
-          <div class="flex flex-col">
+          <div class="flex flex-col mt-4>
             <h1 class="text-5xl font-semibold text-white">Pilu Membiru</h1>
             <h3 class="text-3xl text-[#c7c5c5] mt-4">By Kunto Aji</h3>
             <h3 class="text-3xl text-[#918b8b] mt-4 mb-4">
@@ -1779,11 +1779,21 @@
       </div>
 
       <div class="footer-content">
-        <h4>Content</h4>
-        <li><a href="#about">About</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <h4>Project</h4>
+        <li>
+          <a
+            href="https://muhamad-zafar-syah-portfoliolaravel-111.000webhostapp.com/"
+            >Portfolio</a
+          >
+        </li>
+        <li><a href="htpps://skyflixx.github.io">Skills</a></li>
+        <li><a href="https://soktahu.github.io">Portfolio</a></li>
+        <li>
+          <a
+            href="https://api.whatsapp.com/send/?phone=6288214367530&text=Halloo+Zafarr+mari+kita+membahas+codingan+bersama-sama&type=phone_number&app_absent=0"
+            >Contact Me</a
+          >
+        </li>
       </div>
 
       <div class="footer-content">
