--- a/index.html
+++ b/index.html
@@ -1786,8 +1786,8 @@
             >Portfolio</a
           >
         </li>
-        <li><a href="htpps://skyflixx.github.io">Skills</a></li>
-        <li><a href="https://soktahu.github.io">Portfolio</a></li>
+        <li><a href="htpps://skyflixx.github.io">Skyflixx</a></li>
+        <li><a href="https://soktahu.github.io">SokTahu</a></li>
         <li>
           <a
             href="https://api.whatsapp.com/send/?phone=6288214367530&text=Halloo+Zafarr+mari+kita+membahas+codingan+bersama-sama&type=phone_number&app_absent=0"
